@@ -7,10 +7,11 @@ use Log::Dispatch::Output;
 
 use base qw( Log::Dispatch::Output );
 
-use Params::Validate qw(validate ARRAYREF SCALAR);
+use Params::Validate qw(validate ARRAYREF BOOLEAN HASHREF SCALAR);
 Params::Validate::validation_options( allow_extra => 1 );
 
-use Sys::Syslog 0.25 ();
+use Scalar::Util qw( reftype );
+use Sys::Syslog 0.28 ();
 
 sub new {
     my $proto = shift;
@@ -46,16 +47,21 @@ sub _init {
                 default => 'user'
             },
             socket => {
-                type    => SCALAR | ARRAYREF,
+                type    => SCALAR | ARRAYREF | HASHREF,
                 default => undef
+            },
+            lock => {
+                type    => BOOLEAN,
+                default => 0,
             },
         }
     );
 
-    $self->{ident}    = $p{ident};
-    $self->{logopt}   = $p{logopt};
-    $self->{facility} = $p{facility};
-    $self->{socket}   = $p{socket};
+    $self->{$_} = $p{$_} for qw( ident logopt facility socket lock );
+    if ( $self->{lock} ) {
+        require threads;
+        require threads::shared;
+    }
 
     $self->{priorities} = [
         'DEBUG',
@@ -67,12 +73,9 @@ sub _init {
         'ALERT',
         'EMERG'
     ];
-
-    Sys::Syslog::setlogsock(
-        ref $self->{socket} ? @{ $self->{socket} } : $self->{socket} )
-        if defined $self->{socket};
 }
 
+my $thread_lock;
 sub log_message {
     my $self = shift;
     my %p    = @_;
@@ -80,8 +83,19 @@ sub log_message {
     my $pri = $self->_level_as_number( $p{level} );
 
     eval {
+        threads::shared::lock($thread_lock) if $self->{lock};
+
+        if ( defined $self->{socket} ) {
+            Sys::Syslog::setlogsock(
+                ref $self->{socket} && reftype( $self->{socket} ) eq 'ARRAY'
+                ? @{ $self->{socket} }
+                : $self->{socket}
+            );
+        }
+
         Sys::Syslog::openlog(
-            $self->{ident}, $self->{logopt},
+            $self->{ident},
+            $self->{logopt},
             $self->{facility}
         );
         Sys::Syslog::syslog( $self->{priorities}[$pri], $p{message} );
@@ -147,7 +161,7 @@ Valid options are 'auth', 'authpriv', 'cron', 'daemon', 'kern',
 'local0' through 'local7', 'mail, 'news', 'syslog', 'user',
 'uucp'. Defaults to 'user'
 
-=item * socket ($ or \@)
+=item * socket ($, \@, or \%)
 
 Tells what type of socket to use for sending syslog messages. Valid
 options are listed in C<Sys::Syslog>.
@@ -158,6 +172,21 @@ portable.
 
 If you pass an array reference, it is dereferenced and passed to
 C<Sys::Syslog::setlogsock()>.
+
+If you pass a hash reference, it is passed to C<Sys::Syslog::setlogsock()> as
+is.
+
+=item * lock ($)
+
+If this is set to a true value, then the calls to C<setlogsock()>,
+C<openlog()>, C<syslog()>, and C<closelog()> will all be guarded by a
+thread-locked variable.
+
+This is only relevant when running you are using Perl threads in your
+application. Setting this to a true value will cause the L<threads> and
+L<threads::shared> modules to be loaded.
+
+This defaults to false.
 
 =back
 
